  Ease of use:
    - Reduced the number of batteries needed for Drones to take off, based on calculated requirement
    - Added "out of fuel" notice to Drones, just in case
    - Added chart tag to drone ports
    - Added "blank map" preset for when you want no resources at all (eg. map editor)
  Balancing:
    - Slightly increased length of underground pipe Mk.2
  Bugfixes:
    - Cancelling an autopilot recording by exiting the car now properly cleans up the path drawing
    - Several Project Assembly parts only produced one, should have been two per craft
  Optimizations:
    - Tidied up Sandbox scenario
    - Improved performance of technology unlock progression system
---------------------------------------------------------------------------------------------------
Version: 0.7.0
Date: 2021.06.18
  Changes:
    - Crash Sites can be mined after repairing them, but this takes an entire minute to do as they're not _supposed_ to be mined.
    - Crash Site debris can be blown up with Nobelisks
  Balancing:
    - Nobelisks now destroy trees outright, rather than using the scale-with-distance approach.
    - Behemoth Worms ("gas emitters") can be destroyed by first weakening them with large amounts of radiation.
  Optimizations:
    - Re-structured locale strings into multiple files instead of one monolithic file
---------------------------------------------------------------------------------------------------
Version: 0.7.1
Date: 2021.06.18
  Bugfixes:
    - Crash when Player Two changed the HUB Milestone being researched
    - Fixed ability to put building items into containers
---------------------------------------------------------------------------------------------------
Version: 0.7.2
Date: ????
  Balancing:
    - Increased speed of Mk4 conveyor belts so that they're higher than Satisfactory speeds
    - Satisfactory belts: 60/120/270/480/780
    - Satisfactorio belts: 112.5/225/337.5/562.5/787.5
    - I really wish Factorio belts were more flexible...